--- a/client/src/components/css/OfferCard.css
+++ b/client/src/components/css/OfferCard.css
@@ -1,48 +1,64 @@
 
 .accordion_section{
     padding: 5px;
-    margin: 5px;
+    margin: 15px;
     border: 1px;
     border-style: solid;
     box-shadow: 4px 4px 2px #888888;
     display: grid;
+    grid-template-rows: 160px;
+}
+
+.avatar {
+    width: 100%;
+}
+
+.accordion {
+    grid-column: 1/7;
+    grid-row: 1/2;
+    transition: 0.6s ease;
+    display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(4, 50);
 }
 
 .userCard {
     grid-column: 1/3;
+    text-align: center;
 }
 
 .title {
     grid-column: 3/7;
-}
-
-.accordion {
-    grid-row: 1/2;
-    grid-column: 1/7;
-    transition: backgroung-color 0.6s ease
-}
-
-/* .accordion:hover,
-.active {
-    background-color:whitesmoke;
-} */
-
-.accordion_text{
-
+    position: relative;
+    top: 40%;
+    text-align: center;
+    font-size: 25px;
 }
 
 .accordion_content {
-    grid-column: 1/5;
-    grid-row: 2/4;
+    grid-column: 1/7;
     overflow: hidden;
     padding: 5px;
-    transition: max-height 0.6s ease;
-    max-height: 0px;
+    transition: height 0.6s ease;
+    height: 0px;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(4, 25%)
+
 }
 
-button {
-    background-color: rgb(117, 218, 117);
-    color:whitesmoke;
+.buy {
+    background-color: lightgreen;
+    grid-column: 6/7;
+    grid-row: 3/4;
+}
+
+.trade {
+    background-color: lightgreen;
+    grid-column: 6/7;
+    grid-row: 4/5;
+
+}
+
+.description {
+    grid-column: 1/6;
 }
