--- a/client/src/components/css/Homepage.css
+++ b/client/src/components/css/Homepage.css
@@ -2,7 +2,9 @@
 	position: relative;
 	top: 10vh;
 	height: 90vh;
-	width: 100vw;
+	width: 95vw;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
 #add-button {
