--- a/client/src/components/css/OfferCard.css
+++ b/client/src/components/css/OfferCard.css
@@ -1,65 +1,108 @@
+@font-face {
+	font-family: "Microsoft Yi Baiti";
+	src: url("//db.onlinewebfonts.com/t/5d22bd0816f911a4c90e5d8661157ef9.eot");
+	src: url("//db.onlinewebfonts.com/t/5d22bd0816f911a4c90e5d8661157ef9.eot?#iefix")
+			format("embedded-opentype"),
+		url("//db.onlinewebfonts.com/t/5d22bd0816f911a4c90e5d8661157ef9.woff2")
+			format("woff2"),
+		url("//db.onlinewebfonts.com/t/5d22bd0816f911a4c90e5d8661157ef9.woff")
+			format("woff"),
+		url("//db.onlinewebfonts.com/t/5d22bd0816f911a4c90e5d8661157ef9.ttf")
+			format("truetype"),
+		url("//db.onlinewebfonts.com/t/5d22bd0816f911a4c90e5d8661157ef9.svg#Microsoft Yi Baiti")
+			format("svg");
+}
+
 .offer-card {
-	display: relative;
-	border: 1px solid black;
-	padding: 1em;
+	display: grid;
+	grid-template-columns: repeat(20, 1fr);
+	width: 100%;
+	height: auto;
+	margin: 0;
 	margin-top: 2em;
 }
 
+/* USER INFO */
 .user-info {
-	width: 100%;
-	height: auto;
-	display: grid;
-	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: repeat(2, 1fr);
-	margin-bottom: 2em;
-}
-
-#profile-pic {
-	height: 4em;
-	width: auto;
-	border: 1px solid black;
-	border-radius: 50%;
-	grid-row: 1/3;
-	grid-column: 1;
-	justify-self: center;
-	align-self: center;
+	grid-column: 1/8;
+	margin: 0;
+	background-color: rgb(255, 219, 205);
+	display: inline-block;
 }
 
 #username,
-#karma-icon,
-#karma {
-	font-size: 1.2em;
-	align-self: center;
-	justify-self: left;
+.karma-container {
+	width: 100%;
+	text-align: center;
+	margin-top: 1em;
 }
 
-#username {
-	grid-row: 1;
-	grid-column: 3/6;
+.karma-container {
+	margin-bottom: 1em;
+}
+
+#profile-pic {
+	display: block;
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+	border: 2px solid grey;
+	padding: 2px;
+	border-radius: 50%;
+	margin-top: 1em;
 }
 
 #karma-icon {
-	grid-row: 2;
-	grid-column: 3;
-	height: 1.2em;
-	align-self: center;
+	display: inline-block;
+	height: 1.5em;
+	margin-left: -3px;
 }
 
 #karma {
-	grid-row: 2;
-	grid-column: 4/5;
+	display: inline-block;
+	height: 1.5em;
+	margin-left: 3px;
 }
 
-.details-button {
-	width: 100%;
-	height: 2em;
-	text-align: right;
+/* OFFER INFO */
+.offer-info {
+	grid-column: 8/21;
+	margin: 0;
+	background-color: rgb(202, 219, 254);
+	display: inline-block;
+	padding: 1em 1em 1em 1.5em;
+	position: relative;
 }
 
-#down-arrow {
-	height: 2em;
-	width: 2em;
-	border: 1px solid grey;
-	border-radius: 50%;
-	padding: 3px;
+#type {
+	color: rgb(152, 148, 146);
+}
+
+#title {
+	margin-top: 0.5em;
+	font-size: 1.5em;
+	font-family: "Calibri Light";
+}
+
+.cost-container {
+	text-align: left;
+	height: 1.2em;
+}
+
+#cost-icon {
+	display: inline-block;
+	height: 1.2em;
+}
+
+#cost {
+	display: inline;
+	font-size: 1.2em;
+	vertical-align: middle;
+	margin-left: 4px;
+}
+
+#tags {
+	position: absolute;
+	bottom: 1em;
+	color: rgb(146, 146, 146);
 }
