--- a/client/src/components/css/OfferCard.css
+++ b/client/src/components/css/OfferCard.css
@@ -5,6 +5,10 @@
 	height: auto;
 	margin: 0;
 	margin-top: 1.5em;
+	z-index: 2;
+	-webkit-box-shadow: 0px 3px 5px 0px rgba(184, 173, 184, 1);
+	-moz-box-shadow: 0px 3px 5px 0px rgba(184, 173, 184, 1);
+	box-shadow: 0px 3px 5px 0px rgba(184, 173, 184, 1);
 }
 
 /* USER INFO */
@@ -88,16 +92,21 @@
 
 #tags {
 	position: absolute;
-	bottom: 1em;
+	bottom: 1.2em;
 	color: rgb(146, 146, 146);
 }
 
 /* DETAILS */
 .details-container {
-	grid-column: 1/21;
 	background-color: rgb(255, 248, 240);
 	width: 95%;
-	justify-self: center;
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+	-webkit-box-shadow: 0px 3px 5px 0px rgba(184, 173, 184, 1);
+	-moz-box-shadow: 0px 3px 5px 0px rgba(184, 173, 184, 1);
+	box-shadow: 0px 3px 5px 0px rgba(184, 173, 184, 1);
+	z-index: -1;
 }
 
 #description {
