--- a/client/src/components/css/Homepage.css
+++ b/client/src/components/css/Homepage.css
@@ -1,4 +1,10 @@
+body {
+	height: 100%;
+	width: 100%;
+}
+
 .cards-container {
+	overflow: auto;
 	position: relative;
 	top: 10vh;
 	height: 90vh;
@@ -12,10 +18,15 @@
 	border-radius: 30%;
 	font-size: 40px;
 	border-color: rgb(135, 233, 135);
-  }
+}
   
-  #addButton {
+#addButton {
 	position: fixed;
 	bottom: 10px;
 	right: 10px;
-  }
+}
+
+.list-title{
+	font-size: 30px;
+	text-align: center;
+}
