--- a/client/src/components/css/addOffer.css
+++ b/client/src/components/css/addOffer.css
@@ -21,7 +21,7 @@
 }
 
 .carousel-indicators > li {
-	background-color: aqua !important;
+	background-color: lightgreen !important;
 }
 
 /*DESCRIPTION ITEM*/
