--- a/client/src/components/css/OfferCard.css
+++ b/client/src/components/css/OfferCard.css
@@ -31,12 +31,12 @@
 }
 
 #profile-pic {
+	width: 6em;
 	display: block;
 	position: relative;
 	left: 50%;
 	transform: translateX(-50%);
 	border: 2px solid grey;
-	padding: 2px;
 	border-radius: 50%;
 	margin-top: 1em;
 }
