--- a/client/src/components/css/navbar.css
+++ b/client/src/components/css/navbar.css
@@ -19,6 +19,26 @@
 	position: absolute;
 }
 
+#count-container {
+	background-color: red;
+	border-radius: 50%;
+	width: 1em;
+	text-align: center;
+	height: 1em;
+	position: absolute;
+	left: 2.3em;
+	top: 0.6em;
+}
+
+#notifications-count {
+	width: 100%;
+	position: relative;
+	font-size: 0.5em;
+	top: 50%;
+	transform: translateY(-50%);
+	color: white;
+}
+
 #logo {
 	position: absolute;
 	left: 50%;
@@ -97,14 +117,6 @@
 
 #settings {
 	left: 4em;
-}
-
-#login-button {
-	background-color: transparent;
-	position: relative;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
 }
 
 /* NOTIFICATIONS */
