--- a/client/src/components/css/addOffer.css
+++ b/client/src/components/css/addOffer.css
@@ -10,7 +10,7 @@
 
 .addoffer-container {
 	background-color: white;
-	position: absolute;
+	position: fixed;
 	width: 80vw;
 	height: 80vh;
 	left: 50%;
