--- a/client/src/components/css/navbar.css
+++ b/client/src/components/css/navbar.css
@@ -121,8 +121,7 @@
 
 /* NOTIFICATIONS */
 .notifications-container {
-	border-top: 1px solid black;
-	border-bottom: 1px solid black;
+	border-top: 1px solid grey;
 	height: 60%;
 	overflow: scroll;
 }
