--- a/client/src/components/css/Homepage.css
+++ b/client/src/components/css/Homepage.css
@@ -1,7 +1,50 @@
+/* CAROUSEL */
+.carousel,
+.carousel-item {
+	width: 100vw;
+	height: 100vh;
+	overflow: scroll;
+}
+
+.carousel-indicators {
+	bottom: 84vh;
+	z-index: 20;
+	width: 100vw;
+	margin: 0 !important;
+}
+
+.carousel-indicators li {
+	background-color: black;
+	width: 33%;
+	margin: none !important;
+	border: none;
+	border-top: 5vh solid transparent;
+	opacity: 0.1;
+}
+
+/* MAIN CONTENT */
+.navigation-bar {
+	background-color: white;
+	z-index: 20;
+	position: fixed;
+	top: 10vh;
+	height: 6vh;
+	width: 100vw;
+	text-align: center;
+}
+
+.navigation-bar div {
+	width: 33%;
+	display: inline-block;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
 .cards-container,
 .add-offer-container {
 	position: relative;
-	top: 10vh;
+	top: 16vh;
 	height: 90vh;
 	width: 100vw;
 	left: 50%;
