changed some styling, pushing before applying transitions

--- a/client/src/components/css/Homepage.css
+++ b/client/src/components/css/Homepage.css
@@ -7,8 +7,8 @@
 }
 
 .carousel-indicators {
-	bottom: 84vh;
-	z-index: 20;
+	bottom: 88vh;
+	z-index: 10;
 	width: 100vw;
 	margin: 0 !important;
 }
@@ -16,7 +16,7 @@
 .carousel-indicators li {
 	background-color: black;
 	width: 33%;
-	margin: none !important;
+	margin: 0 !important;
 	border: none;
 	border-top: 5vh solid transparent;
 	opacity: 0.1;
@@ -25,9 +25,9 @@
 /* MAIN CONTENT */
 .navigation-bar {
 	background-color: white;
-	z-index: 20;
+	z-index: 2;
 	position: fixed;
-	top: 10vh;
+	top: 6vh;
 	height: 6vh;
 	width: 100vw;
 	text-align: center;
@@ -44,8 +44,8 @@
 .cards-container,
 .add-offer-container {
 	position: relative;
-	top: 16vh;
-	height: 90vh;
+	top: 12vh;
+	height: 88vh;
 	width: 100vw;
 	left: 50%;
 	transform: translateX(-50%);
@@ -58,6 +58,6 @@
 	width: auto;
 	height: 4em;
 	border-radius: 50%;
-	z-index: 15;
+	z-index: 10;
 	background-color: white;
 }
