--- a/client/src/components/css/addOffer.css
+++ b/client/src/components/css/addOffer.css
@@ -11,8 +11,8 @@
 .addoffer-container {
 	background-color: white;
 	position: fixed;
-	width: 80vw;
-	height: 80vh;
+	width: 85vw;
+	height: 90vh;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
@@ -43,66 +43,40 @@
 	margin-bottom: 2em;
 }
 
-#type-dropdown {
+.level-container,
+.duration-container {
+	width: 100%;
+	margin-bottom: 2rem;
+}
+
+.slider {
 	-webkit-appearance: none;
-	-moz-appearance: none;
+	width: 90%;
+	height: 0.5rem;
+	border-radius: 5px;
+	background: #d3d3d3;
+	outline: none;
+	opacity: 0.7;
+	-webkit-transition: 0.2s;
+	transition: opacity 0.2s;
+}
+
+.slider::-webkit-slider-thumb {
+	-webkit-appearance: none;
 	appearance: none;
-	margin-bottom: 2em;
-	font-size: 0.8em;
-	width: 80%;
-	padding: 5px;
-}
-
-#input-duration {
-	width: 70%;
-	display: grid;
-	grid-template-columns: repeat(6, 1fr);
-	grid-template-rows: repeat(2, 1fr);
-	position: relative;
-	left: 50%;
-	transform: translateX(-50%);
-	padding-bottom: 2em;
-}
-
-#label-duration {
-	grid-row: 1;
-	grid-column: 1/11;
-}
-
-#label-duration,
-#duration-minus,
-#duration-plus {
-	justify-self: center;
-	align-self: center;
-}
-
-#duration-minus,
-#duration-value,
-#duration-plus {
-	grid-row: 2;
-}
-
-#duration-minus,
-#duration-plus {
-	border: 1px solid grey;
-	background-color: white;
+	width: 1.4rem;
+	height: 1.4rem;
 	border-radius: 50%;
-	width: 2em;
-	height: 2em;
-	vertical-align: middle;
-	padding: 0;
+	background: #4caf50;
+	cursor: pointer;
 }
 
-#duration-minus {
-	grid-column: 1/3;
-}
-
-#duration-value {
-	grid-column: 3/5;
-}
-
-#duration-plus {
-	grid-column: 5/7;
+.slider::-moz-range-thumb {
+	width: 1.4rem;
+	height: 1.4rem;
+	border-radius: 50%;
+	background: #4caf50;
+	cursor: pointer;
 }
 
 #cost-field {
