added active and my offers. pushing before trying different ui for cards

--- a/client/src/components/css/Homepage.css
+++ b/client/src/components/css/Homepage.css
@@ -22,6 +22,11 @@
 	opacity: 0.1;
 }
 
+.carousel-control-next,
+.carousel-control-prev {
+	display: none;
+}
+
 /* MAIN CONTENT */
 .navigation-bar {
 	background-color: white;
