--- a/client/src/components/css/Homepage.css
+++ b/client/src/components/css/Homepage.css
@@ -27,6 +27,63 @@
 	display: none;
 }
 
+/* COMPLETE OFFER POPUP */
+.complete-offer-background {
+	position: fixed;
+	z-index: 25;
+	background-color: rgba(0, 0, 0, 0.3);
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+}
+
+.complete-offer-container {
+	background-color: white;
+	position: fixed;
+	width: 85vw;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+	padding: 1.5em;
+	overflow: scroll;
+	z-index: 30;
+	border-radius: 5px;
+}
+
+#complete-title {
+	font-size: 1.5rem;
+}
+
+#complete-pic {
+	width: 7rem;
+	height: 7rem;
+	border: 1px solid black;
+	border-radius: 50%;
+	margin: 1rem;
+}
+
+#complete-star-container {
+	margin: 1rem;
+}
+
+.complete-star {
+	width: 2.5rem;
+	height: 2.5rem;
+	margin: 0.5rem;
+}
+
+#complete-submit,
+#complete-cancel {
+	display: inline-block;
+	width: 6rem;
+	border: 1px solid lightblue;
+	border-radius: 10px;
+	padding: 0.5rem 1rem 0.5rem 1rem;
+	margin: 1rem;
+}
+
 /* MAIN CONTENT */
 .navigation-bar {
 	background-color: white;
