--- a/client/src/components/css/navbar.css
+++ b/client/src/components/css/navbar.css
@@ -14,14 +14,11 @@
   left: 0;
   height: 6vh;
   width: auto;
+  padding: 0.5rem;
 }
 
 #login-button {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  margin-left: 0.5rem;
-  height: 60%;
+  height: 100%;
   width: auto;
 }
 
